﻿===== Hasor-Core v3.1.2 (2017-02-?)
* 新增:
    01.Hasor类在处理用户设置的环境参数时，设定为两种分类。一种是框架层面参数，另外一种是用户层面。
        框架层面：无论是否设置框架层面的环境变量参数，Hasor都会将继续尝试执行加载 env.config，框架参数通过受保护的方法 putFrameworkData 设置。
        用户层面：如果配置了用户层面的环境参数，那么Hasor将放弃加载 env.config。
    02.db框架支持 Bean 类型的 SqlParameterSource。
* 改进:
    01.render 框架以及RenderApiBinder接口功能融入 hasor-web 框架。

===== Hasor-Core v3.1.1 (2017-02-16)
* 修复:
    01.当Hasor通过 Hasor.create 创建容器之后，如果开发者设置了环境参数。那么Hasor将放弃加载 env.config。

===== Hasor-Core v3.1.0 (2017-02-15)
* 改进:
    01.当依赖注入遇到父子类重名字段引发，duplicate异常时候，打印出冲突的字段名。
    02.环境变量名不区分大小写。
    03.AbstractEnvironment，改进“env.config”配置文件的加载改为：先在WORK_HOME下查找，找不到在加载classpath下的。
    04.启动日志中，打印出“env.config”中所加载的所有信息。
    05.原 org.more 包内的工具仅保留使用到的工具类，同时移动到net.hasor.core包中，瘦身约三分之一。
    06.classcode 成为 Hasor 的一部分。
    07.增加 debug 模式，debug 模式下会保存 动态代理生成的字节码文件。
    08.删除不常用的 Event插件，由于再有没有任何内置插件在启动时扫描类，因此 Hasor 启动速度飞快。
* 修复:
    01.fix 当在 jdk8 下使用 hasor aop 功能时出现 VerifyError 错误的问题，3.1.0版本开始不在需要通过 -noverify 参数压制异常。

===== Hasor-Core v3.0.3 (2017-02-07)
* 修复:
    01.Fix ClassEngine 类在判断 @AopIgnore 时，潜在的一个空指针 bug。该问题会导致启动失败。

===== Hasor-Core v3.0.2 (2017-01-30)
* 新增:
    01.新增 ProviderType 接口，用于确定 Provider 接口的返回值类型。
    02.MappingToBuilder 新增 3 个 findBindType 方法用于确定 bindType 类型。
* 修复:
    01.Fix RuntimeFilter入口类，当没有配置 request/ressponse 编码时引发的异常。

===== Hasor-Core v3.0.1 (2017-01-29)
* 修复:
    01.Fix DefaultXmlNode在执行配置替换时，属性没有被替换的问题。
* 改进:
    01.删除了 LogUtils 小工具。

===== Hasor-Core v3.0.0 (2017-01-12)
* 新增:
    01.新增 ApiBinder 扩展机制。开发者可以通过 net.hasor.core.binder.ApiBinderCreater 接口可以自定义 ApiBinder。
    02.WebApiBinder 新增可以设置(请求/响应)编码方法。
    03.通过 ContainerCreater 可以扩展 Hasor 的上帝类了。
    04.新增 @AopIgnore 注解，用于忽略Hasor的Aop动态代理功能。当标记到包上时表示整个包都忽略动态代理。该功能可以有效的防止泛滥的全局Aop。
    05.新增 ApiBinder 接口新增 tryCase 方法用于将 ApiBinder 转换为支持的另外一种接口。
    06.新增 InvokerFilter 接口，该接口功能等同于 Filter。
    07.新增 Invoker 接口取代之前的 RenderData 接口，同时 Invoker 可以像 ApiBinder 一样支持扩展。
    08.新增 MappingSetup 接口，当发现一个控制器时会通过该接口通知给开发者。